--- a/build
+++ b/build
@@ -13,7 +13,7 @@
 #
 # License: GPLv2
 #
-Progs="src:ovpn-tool"
+Progs="src:pki-tool"
 
 # Relative path to protobuf sources
 # e.g. src/foo/a.proto
